<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background_color"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/edit" />

        <ImageButton
            android:id="@+id/imageButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/navbar_background_color"
            android:contentDescription="@string/save_the_contact"
            app:srcCompat="@drawable/save" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/person"
                android:contentDescription="@string/contact_photo"/>

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewContact" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContact">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/enter_street_address"
                android:imeOptions="actionNext"
                android:inputType="text|textPersonName|textCapWords"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddress" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:height="48dp"
                android:ems="9"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editState"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:ems="2"
                android:hint="@string/state"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editZip"
                app:layout_constraintStart_toEndOf="@id/editCity"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editZip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:ems="5"
                android:hint="@string/zipcode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="5"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editHome"
                app:layout_constraintStart_toEndOf="@id/editState"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="8"
                android:hint="@string/home"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editCell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textHome" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/cell_phone"
                app:layout_constraintStart_toEndOf="@id/editHome"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:ems="8"
                android:hint="@string/cell"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editCell"
                app:layout_constraintStart_toStartOf="@id/textCell"
                app:layout_constraintTop_toBottomOf="@id/textCell" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editHome" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:height="48dp"
                android:ems="16"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:nextFocusDown="@id/textBirthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmail" />


            <Button
                android:id="@+id/btnBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/change"
                app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/_01_01_1970"
                app:layout_constraintStart_toEndOf="@id/textBirthday"
                app:layout_constraintTop_toBottomOf="@id/editEmail" />

            <ImageButton
                android:id="@+id/imageButtonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/add_contact_image"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewContact"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/photo_camera" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>