<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/navbar_background_color"
    android:orientation="horizontal"
    android:id="@+id/navbar">

    <ImageButton
        android:id="@+id/imageButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/display_list_of_contacts"
        android:backgroundTint="@color/navbar_background_color"
        android:src="@drawable/iconlist" />

    <ImageButton
        android:id="@+id/imageButtonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/display_contacts_location"
        android:backgroundTint="@color/navbar_background_color"
        android:src="@drawable/map" />

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/display_settings"
        android:backgroundTint="@color/navbar_background_color"
        android:src="@drawable/settings" />
</LinearLayout>
